@@ -6,7 +6,7 @@ Warden::Manager.serialize_into_session do |user|
 end
 
 Warden::Manager.serialize_from_session do |id|
-  Monban.user_class.find_by(id: id)
+  Monban.config.user_class.find_by(id: id)
 end
 
 Warden::Strategies.add(:password_strategy, Monban::Strategies::PasswordStrategy)
